// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_invite_modal should match snapshot for channel_invite_modal with profiles 1`] = `
<Modal
  animation={true}
  aria-labelledby="channelInviteModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal more-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="addUsersToChannelModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="channelInviteModalLabel"
    >
      <FormattedMessage
        defaultMessage="Add New Members to "
        id="channel_invite.addNewMembers"
      />
      <span
        className="name"
      >
        testing
      </span>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
    role="application"
  >
    <MultiSelect
      ariaLabelRenderer={[Function]}
      buttonSubmitLoadingText="Adding..."
      buttonSubmitText="Add"
      handleAdd={[Function]}
      handleDelete={[Function]}
      handleInput={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      key="addUsersToChannelKey"
      loading={true}
      maxValues={20}
      numRemainingText={
        <FormattedMessage
          defaultMessage="Use ↑↓ to browse, ↵ to select. You can add {num, number} more {num, plural, one {person} other {people}}. "
          id="multiselect.numPeopleRemaining"
          values={
            Object {
              "num": 20,
            }
          }
        />
      }
      optionRenderer={[Function]}
      options={
        Array [
          Object {
            "delete_at": 0,
            "id": "user-1",
            "label": "user-1",
            "value": "user-1",
          },
          Object {
            "delete_at": 0,
            "id": "user-2",
            "label": "user-2",
            "value": "user-2",
          },
        ]
      }
      perPage={50}
      placeholderText="Search and add members"
      saving={false}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      valueRenderer={[Function]}
      values={Array []}
    />
  </ModalBody>
</Modal>
`;

exports[`components/channel_invite_modal should match snapshot with exclude and include users 1`] = `
<Modal
  animation={true}
  aria-labelledby="channelInviteModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal more-modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="addUsersToChannelModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="channelInviteModalLabel"
    >
      <FormattedMessage
        defaultMessage="Add New Members to "
        id="channel_invite.addNewMembers"
      />
      <span
        className="name"
      >
        testing
      </span>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
    role="application"
  >
    <MultiSelect
      ariaLabelRenderer={[Function]}
      buttonSubmitLoadingText="Adding..."
      buttonSubmitText="Add"
      handleAdd={[Function]}
      handleDelete={[Function]}
      handleInput={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      key="addUsersToChannelKey"
      loading={true}
      maxValues={20}
      numRemainingText={
        <FormattedMessage
          defaultMessage="Use ↑↓ to browse, ↵ to select. You can add {num, number} more {num, plural, one {person} other {people}}. "
          id="multiselect.numPeopleRemaining"
          values={
            Object {
              "num": 20,
            }
          }
        />
      }
      optionRenderer={[Function]}
      options={
        Array [
          Object {
            "delete_at": 0,
            "id": "user-2",
            "label": "user-2",
            "value": "user-2",
          },
          Object {
            "delete_at": 0,
            "id": "user-3",
            "label": "user-3",
            "value": "user-3",
          },
        ]
      }
      perPage={50}
      placeholderText="Search and add members"
      saving={false}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      valueRenderer={[Function]}
      values={Array []}
    />
  </ModalBody>
</Modal>
`;
